Weird issue on mobile, hopefully this fixes it

--- a/frontend/src/pages/MLBData/MLBData.scss
+++ b/frontend/src/pages/MLBData/MLBData.scss
@@ -102,7 +102,7 @@
   flex-direction: column; /* Change to column layout */
   align-items: center; /* Center items horizontally */
   width: 100%;
-  margin-bottom: 0px;
+  height: 100%;
 }
 
 .game-data {
